terraform/apps_deploy/chacon.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chacon-deployment
spec:
  replicas: 3 # Number of pod replicas
  selector:
    matchLabels:
      app: chacon-app
  template:
    metadata:
      labels:
        app: chacon-app
    spec:
      containers:
      - name: chacon-container
        image: rfchacon717/chacon-image:latest # Your Docker image
        ports:
        - containerPort: 8080 # Replace with your application's port
