terraform/apps_deploy/chacon-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: chacon-services
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: chacon-app
